HEAD
====
- [bugfix] Subject of version-diff-mails contains fixed app title. #4529
- [bugfix] Fix interface handling. #4673

1.6.1
=====
- [bugfix] Pin stomp to v1.3.4 to connect to ActiveMQ again. #4675
- [feature] Inventory status are user configurable. #4665
- [bugfix] Inventory datepicker does not accept existing dates. #4658

1.6.0
=====
- [feature] Upgrade to Rails 5. #4636
- [feature] Add date picker to inventory form. #4497
- [feature] Allow duplicate location names. #4557
- [feature] API tokens should have a name and description. #4543
- [bugfix] Layout of login window is broken in certain Internet Explorer versions. #4381
- [feature] Enable updating machine aliases via API. #4538
- [bugfix] Sorting of parent locations within the creation of new locations is not present. #4542
- [bugfix] Aliases can not be removed nor adjusted via api. #4616

1.5.4.1
=======
- [feature] autocomplete on supplier field in inventory. #4415
- [bugfix] sessions are overwritten in user identification field is not 'uid'. #4562
- [bugfix] resize logo to fix layout in internet explorer. #4381
- [feature] allow updating of aliases fields via api. #4538
- [feature] filter duplicates in inventory autocomplete.

1.5.4
=====
- [feature] Include a markdown cheat sheet. #4527
- [bugfix] Correctly handle invalid FQDN while machine creation. #4508
- [bugfix] Sane sorting of locations in drop down boxes. #4455
- [feature] Add link to API token management interface in backoffice. #4500
- [bugfix] Disallow duplicated network names. Display error page if a existing name is used. #4491
- [bugfix] Display serial number for inventory items if no explicit inventory number is set. #￼4499
- [feature] Reworked locations for speedup and improved usability. #4458
- [update] Updated to ruby 2.2.5 (only for capistrano based deployments on Ubuntu 14.04 LTS)

1.5.3
======
- [security] update to rails 4.2.7.1
- [bugfix] make sure we're allowed to modify install_date