@@ -276,7 +276,7 @@
                 <div class="span12">
                   <table class="table table-condensed">
                     <tr>
-                      <th class="span12">Config instructions:</th>
+                      <th class="span12"><%= Machine.advanced_field_name(1, "long") %>:</th>
                     </tr>
                     <tr>
                       <td class="span12"><%= machine.config_instructions %></td>
@@ -288,7 +288,7 @@
                 <div class="span12">
                   <table class="table table-condensed">
                     <tr>
-                      <th class="span12">Software characteristics:</th>
+                      <th class="span12"><%= Machine.advanced_field_name(2, "long") %>:</th>
                     </tr>
                     <tr>
                       <td class="span12"><%= machine.sw_characteristics %></td>
@@ -300,7 +300,7 @@
                 <div class="span12">
                   <table class="table table-condensed">
                     <tr>
-                      <th class="span12">Business purpose:</th>
+                      <th class="span12"><%= Machine.advanced_field_name(3, "long") %>:</th>
                     </tr>
                     <tr>
                       <td class="span12"><%= machine.business_purpose %></td>
@@ -312,7 +312,7 @@
                 <div class="span12">
                   <table class="table table-condensed">
                     <tr>
-                      <th class="span12">Business criticality:</th>
+                      <th class="span12"><%= Machine.advanced_field_name(4, "long") %>:</th>
                     </tr>
                     <tr>
                       <td class="span12"><%= machine.business_criticality %></td>
@@ -324,7 +324,7 @@
                 <div class="span12">
                   <table class="table table-condensed">
                     <tr>
-                      <th class="span12">Business notification:</th>
+                      <th class="span12"><%= Machine.advanced_field_name(5, "long") %>:</th>
                     </tr>
                     <tr>
                       <td class="span12"><%= machine.business_notification %></td>
